--- a/pom.xml
+++ b/pom.xml
@@ -163,17 +163,17 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-replicator</artifactId>
-      <version>1.1.5-SNAPSHOT</version>
+      <version>1.1.5</version>
     </dependency>
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-orm</artifactId>
-      <version>1.1.5-SNAPSHOT</version>
+      <version>1.1.5</version>
     </dependency>
     <dependency>
      <groupId>org.beigesoft</groupId>
      <artifactId>beige-pdfwriter</artifactId>
-     <version>1.0.1-SNAPSHOT</version>
+     <version>1.0.1</version>
     </dependency>
     <dependency>
      <groupId>junit</groupId>
@@ -217,10 +217,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
-        <configuration>
-          <useReleaseProfile>false</useReleaseProfile>
-          <arguments>-Prelease</arguments>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
