--- a/pom.xml
+++ b/pom.xml
@@ -163,17 +163,17 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-replicator</artifactId>
-      <version>1.1.6-SNAPSHOT</version>
+      <version>1.1.6</version>
     </dependency>
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-orm</artifactId>
-      <version>1.1.6-SNAPSHOT</version>
+      <version>1.1.6</version>
     </dependency>
     <dependency>
      <groupId>org.beigesoft</groupId>
      <artifactId>beige-pdfwriter</artifactId>
-     <version>1.0.2-SNAPSHOT</version>
+     <version>1.0.2</version>
     </dependency>
     <dependency>
      <groupId>junit</groupId>
