--- a/pom.xml
+++ b/pom.xml
@@ -163,12 +163,12 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-replicator</artifactId>
-      <version>1.1.7-SNAPSHOT</version>
+      <version>1.1.7</version>
     </dependency>
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-orm</artifactId>
-      <version>1.1.7-SNAPSHOT</version>
+      <version>1.1.7</version>
     </dependency>
     <dependency>
      <groupId>org.beigesoft</groupId>
