--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,27 @@
       </build>
     </profile>
   </profiles>
-    
+  
+  <reporting>
+    <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-site-plugin</artifactId>
+      <version>3.3</version>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-project-info-reports-plugin</artifactId>
+      <version>2.7</version>
+    </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
   <dependencies>
     <dependency>
       <groupId>org.beigesoft</groupId>
@@ -168,7 +188,7 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-orm</artifactId>
-      <version>1.1.7</version>
+      <version>1.1.8-SNAPSHOT</version>
     </dependency>
     <dependency>
      <groupId>org.beigesoft</groupId>
