--- a/pom.xml
+++ b/pom.xml
@@ -214,8 +214,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
+        <version>2.22.1</version>
         <configuration>
+          <useSystemClassLoader>false</useSystemClassLoader>
           <useFile>false</useFile>
           <trimStackTrace>false</trimStackTrace>
         </configuration>
