--- a/pom.xml
+++ b/pom.xml
@@ -183,12 +183,12 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-replicator</artifactId>
-      <version>1.1.8-SNAPSHOT</version>
+      <version>1.1.8</version>
     </dependency>
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-orm</artifactId>
-      <version>1.1.8-SNAPSHOT</version>
+      <version>1.1.8</version>
     </dependency>
     <dependency>
      <groupId>org.beigesoft</groupId>
