--- a/pom.xml
+++ b/pom.xml
@@ -183,17 +183,17 @@
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-replicator</artifactId>
-      <version>1.1.8</version>
+      <version>1.1.9-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.beigesoft</groupId>
       <artifactId>beigesoft-orm</artifactId>
-      <version>1.1.8</version>
+      <version>1.1.9-SNAPSHOT</version>
     </dependency>
     <dependency>
      <groupId>org.beigesoft</groupId>
      <artifactId>beige-pdfwriter</artifactId>
-     <version>1.0.2</version>
+     <version>1.0.3-SNAPSHOT</version>
     </dependency>
     <dependency>
      <groupId>junit</groupId>
